# briefer_sales_bi

./: .gitignore  LICENSE  README.md  TO DO's.txt
sales_bi/: README.md  pyproject.toml
sales_bi/sales_bi/: create_database.py  create_tables_database.py  fake_data_generator.py  schemas.py  sellers.py
